<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

  <Button
    android:id="@+id/open_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="64dp"
    android:text="@string/open"
    android:onClick="onOpenClick"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/man_cntrl_txt"/>

  <Button
    android:id="@+id/close_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="88dp"
    android:text="@string/close"
    android:onClick="onCloseClick"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/open_btn" />

  <TextView
    android:id="@+id/title_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="36dp"
    android:text="@string/smart_curtains_app"
    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/man_cntrl_txt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="72dp"
    android:text="@string/manual_control"
    android:textAppearance="@style/TextAppearance.AppCompat.Large"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/title_text" />

  <Button
    android:id="@+id/auto_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/automatic"
    android:onClick="onAutoClick"
    app:layout_constraintBottom_toBottomOf="@+id/divider"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.109"
    app:layout_constraintStart_toEndOf="@+id/divider"
    app:layout_constraintTop_toTopOf="@+id/divider" />

  <View
    android:id="@+id/divider"
    android:layout_width="1dp"
    android:layout_height="50dp"
    android:background="?android:attr/listDivider"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/close_btn"
    app:layout_constraintVertical_bias="0.664" />

  <Button
    android:id="@+id/man_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/manual"
    android:onClick="onManualClick"
    app:layout_constraintBottom_toBottomOf="@+id/divider"
    app:layout_constraintEnd_toStartOf="@+id/divider"
    app:layout_constraintHorizontal_bias="0.887"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/divider" />

</androidx.constraintlayout.widget.ConstraintLayout>