<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <EditText
    android:id="@+id/editTextCurrentTemp"
    android:layout_width="290dp"
    android:layout_height="48dp"
    android:layout_marginTop="52dp"
    android:autofillHints="75"
    android:ems="10"
    android:gravity="center"
    android:hint="@string/enter_your_current_temperature"
    android:inputType="number"
    android:textColorHint="#757575"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.495"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextDesiredTemp" />

  <EditText
    android:id="@+id/editTextDesiredTemp"
    android:layout_width="290dp"
    android:layout_height="48dp"
    android:layout_marginTop="92dp"
    android:autofillHints="75"
    android:ems="10"
    android:gravity="center"
    android:hint="@string/desired_temp"
    android:inputType="number"
    android:textColorHint="#757575"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.495"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/auto_cntrl_txt" />

  <Button
    android:id="@+id/go_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/go_btn_text"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextCurrentTemp"
    app:layout_constraintVertical_bias="0.404" />

  <TextView
    android:id="@+id/auto_cntrl_txt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="84dp"
    android:text="@string/automatic_control"
    android:textAppearance="@style/TextAppearance.AppCompat.Large"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>